--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ dfdx = {git = "https://github.com/coreylowman/dfdx", features = ["cuda"]}
 dfdx-derives = {git = "https://github.com/coreylowman/dfdx" }
 dfdx-core = {git = "https://github.com/coreylowman/dfdx" }
 
+serde = "1.0.192"
+csv = "1.3.0"
