--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dfdx = {git = "https://github.com/coreylowman/dfdx", features = ["cuda", "safetensors"]}
+dfdx = {git = "https://github.com/coreylowman/dfdx", features = ["cuda", "safetensors"]} # features = ["safetensors"]
 dfdx-derives = {git = "https://github.com/coreylowman/dfdx" }
 dfdx-core = {git = "https://github.com/coreylowman/dfdx" }
 
@@ -14,8 +14,8 @@ serde = "1.0.192"
 csv = "1.3.0"
 safetensors = "0.4.0"
 memmap2 = "0.9.0"
+rand = "0.8.5"
 
 [features]
-default = ["cuda"]
 cuda = []
 safetensors = []
